# plain-web-app

./: .gitignore  README.md  app.py  pyproject.toml  run.py  setup_firewall.sh
.qwen/: settings.json
templates/: goodbye.html  hello.html  index.html
tests/: conftest.py  test_app.py
